========================
0.0.85
========================

- fixed reconnecting to the server in `OPENCLIENT()`
- added a new version of `UID()` generator (`f` version)
- added `U.convert62(number)` it converts number to a 62 custom radix
- added `U.from62(number)` it converts a 62 custom radix to a number

========================
0.0.84
========================

- fixed `TEMPLATE()` parser
- fixed `stream.pause()/stream.resume()` functionality in the `REQUEST()` method
- extended: `API()` by adding Total.js API services, e.g. `API('TAPI', 'sms', { ... }).promise()`
- extended `API()` by adding `.output(type)` method, a value is set to the `opt.output` object
- fixed `/bundles/*.url` files in debug mode
- improved `API()`, the API `name` can now be called in lowercase
- extended `FAKE()` by adding inline JSON schemas specification
- extended `SCHEDULE()` method by adding support of `cron` basics
- added `QueryBuilder.permit(name, type, value, [useridfield], [userid], [required])` method
- fixed routing inline flags in the form: `&flag1' `&flag2`
- fixed using of message data via `FlowStreamMessage.variables()`
- added support for promises to the `DOWNLOAD()` method
- added `instance.vary(type)` delegate that is executed when `variables`, `variables2` or `secrets` have been changed
- added `asfile` argument into the `flowstream.add(name, body, [callback], [asfile])` method
- added `asfiles` argument into the `flowstream.load(components, design, [callback], [asfiles])` method
- fixed `callback` call after calling of `DEF.onMail()` delegate
- added a global `DATA` object for fast access to the QueryBuilderDB without creating a DB controller (faster than `DB()`)
- fixed parsing `date` for JSON Schemas (it accepts `null` value)
- fixed a check for uploading `webp` images
- updated `$.action('#|+|-action_name', [model])` method by adding support HTTP method types `#`, `+`, `-`