@@ -6,6 +6,7 @@
 - added a new version of `UID()` generator (`f` version)
 - added `U.convert62(number)` it converts number to a 62 custom radix
 - added `U.from62(number)` it converts a 62 custom radix to a number
+- fixed loading of FlowStream schema (critical)
 
 ========================
 0.0.84
